[gd_scene load_steps=7 format=3 uid="uid://b3k8nu13o07m"]

[ext_resource type="Texture2D" uid="uid://nbkba5gu2ccc" path="res://assets/ui/borders_hint.png" id="1_14f66"]
[ext_resource type="Script" path="res://src/user_interface/hint_window/hint_window.gd" id="1_osvaf"]
[ext_resource type="FontFile" uid="uid://dind3ch1iwrtl" path="res://assets/fonts/compression.ttf" id="3_g7m5m"]

[sub_resource type="Animation" id="Animation_462f4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedBorder:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedBorder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(56, 44)]
}

[sub_resource type="Animation" id="Animation_7mq3t"]
resource_name = "grow"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedBorder:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(16, 16), Vector2(118, 16), Vector2(118, 94)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedBorder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(56, 44), Vector2(5, 44), Vector2(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p3fas"]
_data = {
"RESET": SubResource("Animation_462f4"),
"grow": SubResource("Animation_7mq3t")
}

[node name="HintWindow" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_osvaf")

[node name="StaticBorder" type="NinePatchRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 88.0
texture = ExtResource("1_14f66")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="AnimatedBorder" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 44.0
offset_right = -56.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_14f66")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="HintText" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 96.0
theme_override_constants/line_separation = 1
theme_override_fonts/normal_font = ExtResource("3_g7m5m")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p3fas")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
